separated theme and library code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="preload" href="./favicon.ico" as="image">
 
     <link rel="stylesheet" href="./dist/css/index.css">
+    <link rel="stylesheet" href="./themes/default/default.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
