class name changed for js as .envelope

--- a/dynamically_generated_layouts.html
+++ b/dynamically_generated_layouts.html
@@ -70,7 +70,7 @@
                 // Loop through main content types
                 const mainContentOptions = ['main', 'section', 'article'];
                 // Loop through footer placements
-                const footerOptions = [false, 'body', 'container']; // Excluded, in body, in div.envelope
+                const footerOptions = [false, 'body', 'envelope']; // Excluded, in body, in div.envelope
 
                 // Generate combinations
                 headerOptions.forEach(header => {
