--- a/dynamically_generated_layouts.html
+++ b/dynamically_generated_layouts.html
@@ -2,7 +2,6 @@
 
 <head>
     <title>HTML++ without Theme</title>
-    <!-- <link rel="stylesheet" href="./themes/default/default.css"> -->
     <link rel="stylesheet" href="./dist/css/index.css">
     <style>
         header,
@@ -54,12 +53,13 @@
                 const headerOptions = [
                     false,                  // Excluded
                     'body',                 // Inside body
-                    'container',            // Inside div.envelope
+                    'envelope',             // Inside div.envelope
                     'aside',                // As a child of aside
                     'main',                 // As a child of main
                     'article',              // As a child of article
                     'section'               // As a child of section
                 ];
+
                 // Loop through aside combinations: none, one (left), one (right), two
                 const asideOptions = [
                     { left: false, right: false }, // none
@@ -67,8 +67,10 @@
                     { left: false, right: true },  // one right
                     { left: true, right: true }    // two asides
                 ];
+
                 // Loop through main content types
                 const mainContentOptions = ['main', 'section', 'article'];
+
                 // Loop through footer placements
                 const footerOptions = [false, 'body', 'envelope']; // Excluded, in body, in div.envelope
 
@@ -83,25 +85,27 @@
                                     asides: aside,
                                     content: [],
                                     footer,
-                                    usesContainer: false // Track if div.envelope is used
+                                    usesEnvelope: false // Track if div.envelope is used
                                 };
 
+                                // Open div.envelope if it's being used
+                                if (header === 'envelope' || footer === 'envelope') {
+                                    layout.content.push('<div class="envelope">');
+                                    layout.usesEnvelope = true; // Mark that envelope is used
+                                }
+
                                 // Add the header
-                                if (header) {
+                                if (header && header !== 'envelope') {
                                     const headerText = `header, in ${header}`;
                                     layout.content.push(`<header>${headerText}</header>`);
-                                    if (header === 'container') {
-                                        layout.content.push('<div class="container">'); // Open container if header is in it
-                                        layout.usesContainer = true;
-                                    }
                                 }
 
                                 // Add asides based on the count
                                 if (aside.left) {
-                                    layout.content.unshift(`<aside>aside (left), in main</aside>`);
+                                    layout.content.unshift(`<aside>aside (left), in ${header || 'body'}</aside>`);
                                 }
                                 if (aside.right) {
-                                    layout.content.push(`<aside>aside (right), in main</aside>`);
+                                    layout.content.push(`<aside>aside (right), in ${header || 'body'}</aside>`);
                                 }
 
                                 // Add main content
@@ -112,15 +116,11 @@
                                 if (footer) {
                                     const footerText = `footer, in ${footer}`;
                                     layout.content.push(`<footer>${footerText}</footer>`);
-                                    if (footer === 'container') {
-                                        layout.content.push('</div>'); // Close container if footer is in it
-                                        layout.usesContainer = true;
-                                    }
                                 }
 
-                                // Close container if used in the header
-                                if (header === 'container' && aside.left && aside.right) {
-                                    layout.content.push('</div>'); // Close container
+                                // Close div.envelope if it was opened
+                                if (layout.usesEnvelope) {
+                                    layout.content.push('</div>');
                                 }
 
                                 // Store the layout
@@ -136,7 +136,7 @@
                     layoutDiv.classList.add('layout'); // Optionally set a class name for styles
 
                     // Set h3 innerText based on whether div.envelope is used
-                    const h3Text = `Layout ${layoutCount} (${layout.usesContainer ? "With div.envelope" : "Without div.envelope"}):`;
+                    const h3Text = `Layout ${layoutCount} (${layout.usesEnvelope ? "With div.envelope" : "Without div.envelope"}):`;
                     let layoutHtml = `<h3>${h3Text}</h3>`;
                     layoutCount++; // Increment layout number
 
