updated class for html .container to .envelope

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>The HTML++ framework</h2>
     </header>
 
-    <div class="container">
+    <div class="envelope">
         <aside>
             <section>
                 <h3>Navigation</h3>
