--- a/_others/index2.html
+++ b/_others/index2.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>HTML++ without Theme</title>
-    <link rel="stylesheet" href="../themes/default/default.css">
-    <link rel="stylesheet" href="../dist/css/index.css">
+    <!-- <link rel="stylesheet" href="../themes/default/default.css"> -->
+    <link rel="stylesheet" href="../dist/css/layout.css">
     <style>
         header,
         aside,
