--- a/_others/index3.html
+++ b/_others/index3.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>HTML++ without Theme</title>
-    <link rel="stylesheet" href="../dist/css/index.css">
+    <link rel="stylesheet" href="../dist/css/layout.css">
     <style>
         header,
         aside,
