--- a/_others/tooltip_test.html
+++ b/_others/tooltip_test.html
@@ -9,7 +9,7 @@
         /* Target all elements with a title attribute */
         [title] {
             position: relative;
-            cursor: help;
+            cursor: pointer;
         }
 
         /* Create the tooltip using the ::after pseudo-element */
@@ -68,7 +68,7 @@
         [title]:hover::before {
             bottom: auto;
             top: 125%;
-            transform: translate.(-50%).
+            transform: translate(-50%).
         }
     </style>
 </head>
