--- a/_others/tooltip_test.html
+++ b/_others/tooltip_test.html
@@ -68,7 +68,7 @@
         [title]:hover::before {
             bottom: auto;
             top: 125%;
-            transform: translate(-50%).
+            transform: translate(-50%)
         }
     </style>
 </head>
